<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/backgroundImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

        <Button
            android:id="@+id/callButton"
            android:layout_width="126dp"
            android:layout_height="67dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="613dp"
            android:text="@string/call_qiyao" />

        <Button
            android:id="@+id/messageButton"
            android:layout_width="121dp"
            android:layout_height="64dp"
            android:layout_below="@id/callButton"
            android:layout_marginStart="150dp"
            android:layout_marginTop="-600dp"
            android:text="@string/sent_sms" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/love"
            android:textSize="34sp" />

        <Button
            android:id="@+id/goToMessageButton"
            android:layout_width="wrap_content"
            android:layout_height="62dp"
            android:layout_marginStart="135dp"
            android:layout_marginTop="200dp"
            android:onClick="goToMessageActivity"
            android:text="@string/go_to_message"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/showQuoteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="135dp"
            android:layout_marginTop="300dp"
            android:text="@string/show_quote"
            android:onClick="showQuote" />





        <!--        <com.google.android.youtube.player.YouTubePlayerView-->
<!--            android:id="@+id/youtubePlayerView"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_centerInParent="true"-->
<!--            tools:ignore="MissingClass" />-->



    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>